test/conformance/chainsaw/generate/validation/clusterpolicy/immutable-clone/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: immutable-clone
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: policy.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: update-name.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: update-namespace.yaml
